feature/text-editor adds DownloadApp