@@ -13,8 +13,15 @@ javafx {
     modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics' ]
 }
 
+run {
+    jvmArgs = [
+            "--module-path", classpath.asPath,
+            "--add-modules", "javafx.controls,javafx.graphics"
+    ]
+}
+
 application {
-    mainClass = 'ui.EditWindow'
+    mainClass = 'ui.DownloadingApp'
 }
 
 dependencies {
